--- a/theme/src/layout/vgrid.less
+++ b/theme/src/layout/vgrid.less
@@ -20,10 +20,20 @@
      margin-bottom: @magicNumber;
  }
 
+
+
  .inner-wrap-header {
      #desinax-vgrid.grid(100%);
      margin-bottom: @magicNumber;
  }
+
+ .inner-wrap-header .row {
+     max-width: 100%;
+}
+
+.inner-wrap-footer .row {
+    max-width: 100%;
+}
 
  .vgrid .inner-wrap {
      @gridImage: "../img/grid_24x30x10-nomargin.png";
